Refactor Student and Course relationship to Many-to-Many and improve data model
- Implement StudentCourse join entity with StudentCourseId composite key.
- Add orderNumber to StudentCourse for per-course student ordering.
- Add dynamic age calculation in Student entity using @Transient.
- Refactor Student and Course entities to support the many-to-many relationship.
- Create UserMapper component to centralize DTO mapping logic.
- Update UserService, AttendanceService, and CsvImportService to use the new model and mapper.
- Update StudentDTO and AttendanceResponse with new fields and structure.
- Adjust tests and data seeding for the refactored model.

Co-authored-by: GustavoDago <52260723+GustavoDago@users.noreply.github.com>